@startuml
'https://plantuml.com/class-diagram
        abstract class AbstractProp
        class BloodProp
        class FireProp
        class BombProp
        AbstractProp <|-- BloodProp
        AbstractProp <|-- FireProp
        AbstractProp <|-- BombProp


        interface PropFactory {
            + createProp(int x, int y):AbstractProp
        }

        class BloodPropFactory {
            + createProp(int x, int y):AbstractProp
        }
        class FirePropFactory {
            + createProp(int x, int y):AbstractProp
        }
        class BombPropFactory {
            + createProp(int x, int y):AbstractProp
        }

        PropFactory <|.. BloodPropFactory : 实现
        PropFactory <|.. FirePropFactory : 实现
        PropFactory <|.. BombPropFactory : 实现

        BloodPropFactory ..> BloodProp : 创建
        FirePropFactory ..> FireProp : 创建
        BombPropFactory ..> BombProp : 创建



                class RandomPropSpawner {
                    // 这个类将被 Game/crashCheckAction 调用
                    - factoryList:List<PropFactory>
                    - random:Random
                    --
                    + spawnProp(x, y):AbstractProp
                }


            Game --> RandomPropSpawner : 使用

            RandomPropSpawner --> PropFactory : 引用/选择
@enduml


